[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Sprites/VoidMote-Blue.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprites/Shadows/SmallShadow.png" type="Texture" id=2]
[ext_resource path="res://Enemies/VoidMote.gd" type="Script" id=3]
[ext_resource path="res://Utils/Hit and Hurt Boxes/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 58, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 116, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 174, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 232, 0, 58, 82 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 290, 0, 58, 82 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 2.0

[sub_resource type="CircleShape2D" id=9]
radius = 4.0

[node name="VoidMote" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="ShadowSprite" type="Sprite" parent="."]
position = Vector2( 0, 5.96046e-08 )
scale = Vector2( 0.6, 0.5 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 7 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Tween" type="Tween" parent="."]

[node name="HitBox" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 9 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="HitBox"]
